--- a/page2.html
+++ b/page2.html
@@ -309,7 +309,7 @@
             <div class="card p-3 col-12 col-md-4 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="assets/files/jpg2pdf.pdf"><span class="mbr-iconfont mobi-mbri-sites mobi-mbri" style="color: rgb(203, 138, 255); fill: rgb(203, 138, 255);"></span></a>
+                        <a href="assets/files/jpg2pdf.pdf" target="_blank"><span class="mbr-iconfont mobi-mbri-sites mobi-mbri" style="color: rgb(203, 138, 255); fill: rgb(203, 138, 255);"></span></a>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                             <strong>Supply Chain</strong><br><br><strong><br></strong></h4>
                     </div>
@@ -538,7 +538,7 @@
         </div>
 
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2857105" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html"> Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2857105" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with &#8204;</p><a style="z-index:1" href="https://mobirise.com">Web Design Program</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
