--- a/glitch/index.html
+++ b/glitch/index.html
@@ -116,7 +116,7 @@
 
         <div class="projects-grid">
             <!-- Exercises -->
-            <a href="exercise-1-basic-drawing-and-program-syntax/index.html" class="project-card">
+            <a href="exercise-1-basic-drawing-and-program-syntax/index.html" class="project-card" target="_blank">
                 <div class="project-title">Exercise 1: Basic Drawing</div>
                 <div class="project-description">
                     Introduction to p5.js fundamentals: shapes, colors, and basic program syntax.
@@ -124,7 +124,7 @@
                 <span class="project-tag exercise-tag">Exercise</span>
             </a>
 
-            <a href="exercise-2-transformations-/index.html" class="project-card">
+            <a href="exercise-2-transformations-/index.html" class="project-card" target="_blank">
                 <div class="project-title">Exercise 2: Transformations</div>
                 <div class="project-description">
                     Exploring translate, rotate, and scale transformations in p5.js.
@@ -132,7 +132,7 @@
                 <span class="project-tag exercise-tag">Exercise</span>
             </a>
 
-            <a href="exercise-3-conditionalz/index.html" class="project-card">
+            <a href="exercise-3-conditionalz/index.html" class="project-card" target="_blank">
                 <div class="project-title">Exercise 3: Conditionals</div>
                 <div class="project-description">
                     Working with if/else statements and conditional logic for interactive sketches.
@@ -140,7 +140,7 @@
                 <span class="project-tag exercise-tag">Exercise</span>
             </a>
 
-            <a href="loops-exercise-4/index.html" class="project-card">
+            <a href="loops-exercise-4/index.html" class="project-card" target="_blank">
                 <div class="project-title">Exercise 4: Loops</div>
                 <div class="project-description">
                     Creating patterns and repeated elements using for and while loops.
@@ -148,7 +148,7 @@
                 <span class="project-tag exercise-tag">Exercise</span>
             </a>
 
-            <a href="exercise-six-exercise-/index.html" class="project-card">
+            <a href="exercise-six-exercise-/index.html" class="project-card" target="_blank">
                 <div class="project-title">Exercise 6</div>
                 <div class="project-description">
                     Advanced p5.js techniques and creative exploration.
@@ -156,7 +156,7 @@
                 <span class="project-tag exercise-tag">Exercise</span>
             </a>
 
-            <a href="seven-ex/index.html" class="project-card">
+            <a href="seven-ex/index.html" class="project-card" target="_blank">
                 <div class="project-title">Exercise 7</div>
                 <div class="project-description">
                     Continued exploration of creative coding concepts.
@@ -165,7 +165,7 @@
             </a>
 
             <!-- Projects -->
-            <a href="solar-system-drawing/index.html" class="project-card">
+            <a href="solar-system-drawing/index.html" class="project-card" target="_blank">
                 <div class="project-title">🪐 Solar System Drawing</div>
                 <div class="project-description">
                     An artistic representation of our solar system with planets and orbits.
@@ -173,7 +173,7 @@
                 <span class="project-tag">Project</span>
             </a>
 
-            <a href="solar-system-adam/index.html" class="project-card">
+            <a href="solar-system-adam/index.html" class="project-card" target="_blank">
                 <div class="project-title">🌌 Solar System (Adam's Version)</div>
                 <div class="project-description">
                     An animated solar system with interactive elements and celestial bodies.
@@ -181,7 +181,7 @@
                 <span class="project-tag">Project</span>
             </a>
 
-            <a href="dvd-tv/index.html" class="project-card">
+            <a href="dvd-tv/index.html" class="project-card" target="_blank">
                 <div class="project-title">📺 DVD TV Screensaver</div>
                 <div class="project-description">
                     A nostalgic recreation of the classic DVD logo bouncing screensaver.
@@ -189,7 +189,7 @@
                 <span class="project-tag">Project</span>
             </a>
 
-            <a href="exquisite-corpse-f24-group1/index.html" class="project-card">
+            <a href="exquisite-corpse-f24-group1/index.html" class="project-card" target="_blank">
                 <div class="project-title">🎨 Exquisite Corpse</div>
                 <div class="project-description">
                     A collaborative Surrealist-inspired artwork where each body part is coded separately.
@@ -198,7 +198,7 @@
             </a>
 
             <!-- Creative Sketches -->
-            <a href="able-field-sandpaper/index.html" class="project-card">
+            <a href="able-field-sandpaper/index.html" class="project-card" target="_blank">
                 <div class="project-title">Able Field Sandpaper</div>
                 <div class="project-description">
                     An experimental generative art piece exploring texture and pattern.
@@ -206,7 +206,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="candy-veiled-windflower/index.html" class="project-card">
+            <a href="candy-veiled-windflower/index.html" class="project-card" target="_blank">
                 <div class="project-title">🌸 Candy Veiled Windflower</div>
                 <div class="project-description">
                     A colorful, organic sketch inspired by floral forms and natural movement.
@@ -214,7 +214,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="cosmic-subdued-apparatus/index.html" class="project-card">
+            <a href="cosmic-subdued-apparatus/index.html" class="project-card" target="_blank">
                 <div class="project-title">🌠 Cosmic Subdued Apparatus</div>
                 <div class="project-description">
                     A space-themed interactive visualization with cosmic elements.
@@ -222,7 +222,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="elite-daisy-nautilus/index.html" class="project-card">
+            <a href="elite-daisy-nautilus/index.html" class="project-card" target="_blank">
                 <div class="project-title">🐚 Elite Daisy Nautilus</div>
                 <div class="project-description">
                     Geometric patterns inspired by nautilus shells and natural spirals.
@@ -230,7 +230,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="mountainous-gabby-lamprey/index.html" class="project-card">
+            <a href="mountainous-gabby-lamprey/index.html" class="project-card" target="_blank">
                 <div class="project-title">⛰️ Mountainous Gabby Lamprey</div>
                 <div class="project-description">
                     A landscape-inspired generative sketch with dynamic elements.
@@ -238,7 +238,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="quick-freezing-chocolate/index.html" class="project-card">
+            <a href="quick-freezing-chocolate/index.html" class="project-card" target="_blank">
                 <div class="project-title">🍫 Quick Freezing Chocolate</div>
                 <div class="project-description">
                     An abstract visualization exploring motion and transformation.
@@ -246,7 +246,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="quiz-code-testing/index.html" class="project-card">
+            <a href="quiz-code-testing/index.html" class="project-card" target="_blank">
                 <div class="project-title">📝 Quiz Code Testing</div>
                 <div class="project-description">
                     Practice and testing ground for creative coding concepts.
@@ -254,7 +254,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="rose-shard-joke/index.html" class="project-card">
+            <a href="rose-shard-joke/index.html" class="project-card" target="_blank">
                 <div class="project-title">🌹 Rose Shard Joke</div>
                 <div class="project-description">
                     A playful sketch combining geometric shapes with organic forms.
@@ -262,7 +262,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="thoracic-past-look/index.html" class="project-card">
+            <a href="thoracic-past-look/index.html" class="project-card" target="_blank">
                 <div class="project-title">Thoracic Past Look</div>
                 <div class="project-description">
                     An experimental piece exploring structure and organic patterns.
@@ -270,7 +270,7 @@
                 <span class="project-tag">Sketch</span>
             </a>
 
-            <a href="wary-heavenly-bar/index.html" class="project-card">
+            <a href="wary-heavenly-bar/index.html" class="project-card" target="_blank">
                 <div class="project-title">✨ Wary Heavenly Bar</div>
                 <div class="project-description">
                     A celestial-themed interactive visualization with dynamic elements.
