--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="text-wrapper text-center">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Natalie Annabelle</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Hello! Welcome to my site! A place where you can experience me through my works. I am currently a undergraduate student at Toronto Metropolitan University, formerly known as Ryerson University. I am studying Graphic Communications Management, with a concentration in Publishing. I take part in photography, poetry, story writing, coding and I dabble in design work. </p>
+                        Hello! Welcome to my portfolio site! A place where you can experience me through my works. I am currently a graduate student at Toronto Metropolitan University (TMU), formerly known as Ryerson University. I am pursuing my Masters in Digital Media and I am a graduate of Graphic Communications Management with a concentration in Publishing from TMU. I take part in photography, poetry, story writing, coding and I dabble in design work. </p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="page3.html">Photographic Work</a> <a class="btn btn-warning display-7" href="page1.html">Written Work</a> <a class="btn btn-warning display-7" href="page2.html">Graphic Work</a></div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
             
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2857105" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2857105" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Free AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
