--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>About</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">natjannabelle@gmail.com</p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Masters of Digital Media <a href="https://www.torontomu.ca/master-digital-media/the-mdm-network/cohort-18-f2025-s2026/natalie-annabelle/" class="text-warning text-primary" target="_blank">Profile</a><br><br>natjannabelle@gmail.com<a href="https://www.torontomu.ca/master-digital-media/the-mdm-network/cohort-18-f2025-s2026/natalie-annabelle/" class="text-warning text-primary" target="_blank"><br></a></p>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-7">
                     <strong>Socials</strong></h5>
                 <div class="social-row display-7">
@@ -144,7 +144,7 @@
             
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2857105" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Free AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2857105" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">HTML Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
